[package]
name = "python-to-mermaid"
version = "0.1.0"
edition = "2021"
description = "Convert Python code to Mermaid flowchart"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
itertools = "0.13.0"
rustpython-ast = { version = "0.3.1", features = ["unparse", "visitor"] }
rustpython-parser = "0.3.1"
